[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Ludeeus <ludeeus@ludeeus.dev>"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "One version package to rule them all, One version package to find them, One version package to bring them all, and in the darkness bind them."
exclude = ['**/__pycache__']
include = ["awesomeversion", "awesomeversion.*", "LICENCE.md"]
keywords = ["calver", "semver", "0ver", "version", "pep440", "buildver"]
license = "MIT"
maintainers = ["Ludeeus <ludeeus@ludeeus.dev>"]
name = "awesomeversion"
readme = "README.md"
repository = "https://github.com/ludeeus/awesomeversion"
version = "0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^24.8"
isort = "^6.0.1"
mypy = "^1.15"
pylint = "^3.3.4"
pytest = "^8.3.5"
pytest-codspeed = "^3.2.0"
pytest-cov = "^6.0.0"
pytest-snapshot = "^0.9.0"
pytest-timeout = "^2.3.1"

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "unsubscriptable-object,duplicate-code,too-many-public-methods"


[tool.coverage.run]
source = ["awesomeversion"]
omit = ["setup.py", "tests/*"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]